--- a/res/layout/create_new_user.xml
+++ b/res/layout/create_new_user.xml
@@ -3,6 +3,7 @@
     style="@style/LogInTheme">
 
     <TextView
+        android:id="@+id/tvCreateNewUserTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/create_acct"
@@ -45,7 +46,7 @@
     </EditText>
     
     <EditText 
-        android:id="@+id/etLoginPasswordInfo"
+        android:id="@+id/etNewUserPasswordInfo"
         android:layout_width="285dp"
         android:layout_height="30dp"
         android:background="@drawable/rounded_edittext"
@@ -68,7 +69,7 @@
         android:orientation="horizontal">
         
         <Button 
-            android:id="@+id/bLogInUser"
+            android:id="@+id/bCancelCreateNewUser"
             android:layout_width="125dp"
             android:layout_height="match_parent"
             android:text="@string/cancel"
@@ -76,7 +77,7 @@
         </Button>
         
         <Button 
-            android:id="@+id/bCreateNewUserFromMain"
+            android:id="@+id/bCreateNewUser"
             android:layout_width="125dp"
             android:layout_height="match_parent"
             android:layout_marginLeft="10dp"
