--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -2,11 +2,23 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="horizontal" >
 
-    <TextView
-        android:layout_width="match_parent"
+    <EditText
+        android:id="@+id/message"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="@string/hello" />
+        android:layout_weight="1"
+        android:hint="@string/message" >
+
+        <requestFocus />
+    </EditText>
+    
+    <Button 
+        android:id="@+id/send"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/button_send"
+        android:onClick="sendMessage" />
 
 </LinearLayout>
