--- a/res/layout/groups.xml
+++ b/res/layout/groups.xml
@@ -2,7 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white" >
+    android:background="@color/white" 
+    android:padding="10dp"
+    style="@style/CustomActionBarTheme">
     
     <ScrollView android:id="@+id/svGroups"
         android:layout_width="match_parent"
