--- a/res/values/color.xml
+++ b/res/values/color.xml
@@ -2,6 +2,8 @@
 
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
+    <color name="clear">#00000000</color>
     <color name="light_purple">#9933CC</color>
-
+    <color name="transparent_light_purple">#7f9933CC</color>
+    
 </resources>
