--- a/res/layout/groups.xml
+++ b/res/layout/groups.xml
@@ -3,8 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white" 
-    android:padding="10dp"
-    style="@style/CustomActionBarTheme">
+    android:padding="10dp">
     
     <ScrollView android:id="@+id/svGroups"
         android:layout_width="match_parent"
