--- a/res/layout/log_in_screen.xml
+++ b/res/layout/log_in_screen.xml
@@ -1,9 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/CustomActionBarTheme"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/light_purple" >
+    style="@style/PurpleBackgroundTheme" >
 
     <TextView
         android:id="@+id/tvLogInScreenTitle"
