--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,9 +1,11 @@
 <resources>
 
-    <style name="CustomActionBarTheme"
-           parent="@android:style/Theme.Holo.Light.DarkActionBar">
-        <item name="android:actionBarStyle">@style/MyActionBar</item>
-    </style>
+    <style name="PurpleBackgroundTheme" parent="@android:style/TextAppearance.Medium">
+         <item name="android:layout_width">match_parent</item>
+         <item name="android:layout_height">match_parent</item>
+         <item name="android:background">#AA66CC</item>
+         <item name="android:orientation">vertical</item>
+     </style>
     
     <style name="AppTheme" parent="@android:style/Theme.Holo.Light">
         <item name="android:actionBarStyle">@style/ActionBarTheme</item>
@@ -11,12 +13,6 @@
 
     <style name="ActionBarTheme" parent="@android:style/Widget.Holo.Light.ActionBar">
         <item name="android:background">@color/light_purple</item>
-    </style>
-
-    <!-- ActionBar styles -->
-    <style name="MyActionBar"
-           parent="@android:style/Widget.Holo.Light.ActionBar.Solid.Inverse">
-        <item name="android:background">#ff99cc00</item>
     </style>
 
 </resources>
