started posts page

--- a/res/values/color.xml
+++ b/res/values/color.xml
@@ -4,6 +4,7 @@
     <color name="black">#000000</color>
     <color name="clear">#00000000</color>
     <color name="light_purple">#9933CC</color>
+    <color name="light_blue">#33b5e5</color>
     <color name="transparent_light_purple">#7f9933CC</color>
     
 </resources>
