--- a/res/layout/create_new_user.xml
+++ b/res/layout/create_new_user.xml
@@ -31,6 +31,17 @@
         android:gravity="center"
         android:inputType="textPersonName" >
     </EditText>
+
+    <TextView
+        android:id="@+id/tvNameClarification"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/alert_name_clarification"
+        android:layout_marginTop="10dp"
+        android:textSize = "15dp"
+        android:gravity="center"
+        android:textColor="#FFFFFF" >
+    </TextView>
     
     <EditText 
         android:id="@+id/etNewUserEmailAddressInfo"
