--- a/res/values/color.xml
+++ b/res/values/color.xml
@@ -5,6 +5,7 @@
     <color name="clear">#00000000</color>
     <color name="light_purple">#9933CC</color>
     <color name="light_blue">#33b5e5</color>
+    <color name="light_grey">#aaaaaa</color>
     <color name="dark_blue">#0099cc</color>
     <color name="transparent_light_purple">#7f9933CC</color>
     
