Create new group dialog created

--- a/res/layout/create_new_group.xml
+++ b/res/layout/create_new_group.xml
@@ -2,6 +2,26 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
-    
+
+    <TextView
+        android:id="@+id/tvCreateNewGroupTitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="12dp"
+        android:gravity="center"
+        android:text="@string/create_new_group"
+        android:textSize="25dp" />
+
+    <EditText
+        android:id="@+id/etCreateNewGroupSetName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/tvCreateNewGroupTitle"
+        android:layout_marginTop="10dp"
+        android:hint="@string/group_name"
+        android:imeOptions="actionDone"
+        android:singleLine="true" />
 
 </RelativeLayout>
