--- a/res/layout/posts.xml
+++ b/res/layout/posts.xml
@@ -11,10 +11,9 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_margin="10dp"
-        android:background="@color/white"
         android:gravity="center"
         android:padding="10dp"
-        android:textColor="@color/black"
+        android:textColor="@color/light_purple"
         android:textSize="35sp" />
 
     <View
