--- a/res/layout/create_new_user.xml
+++ b/res/layout/create_new_user.xml
@@ -84,33 +84,54 @@
     
     </LinearLayout>
     
-    <LinearLayout 
+    <RelativeLayout 
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
+        android:layout_height="75dp"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:orientation="horizontal">
+        android:layout_centerHorizontal="true">
+     
+        <View
+            android:id="@+id/top"
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_alignParentTop="true"
+            android:background="@color/white" />
+
+        <View
+            android:id="@+id/split"
+            android:layout_width="2dp"
+            android:layout_height="match_parent"
+            android:layout_centerHorizontal="true"
+            android:background="@color/white" />
         
         <Button 
             android:id="@+id/bCancelCreateNewUser"
-            android:layout_width="125dp"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_below="@+id/top"
+            android:layout_centerHorizontal="true"
+            android:layout_toLeftOf="@+id/split"
+            android:background="@drawable/group_background"
+            android:gravity="center"
             android:text="@string/cancel"
             android:textColor="@color/white"
-            android:color="#9933CC" >
+            android:textSize="20sp"  >
         </Button>
         
         <Button 
             android:id="@+id/bCreateNewUser"
-            android:layout_width="125dp"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginLeft="10dp"
+            android:layout_below="@+id/top"
+            android:layout_centerHorizontal="true"
+            android:layout_toRightOf="@+id/split"
+            android:background="@drawable/group_background"
+            android:gravity="center"
             android:text="@string/ok"
             android:textColor="@color/white"
-            android:color="#9933CC"  >
+            android:textSize="20sp"  >
         </Button>
         
-    </LinearLayout>
+    </RelativeLayout>
 
 </RelativeLayout>
